# SuvMusic

./: .editorconfig  .gitignore  .gitmodules  1.0.3_suvmusic.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  DEVELOPER.md  FIX_PROMPT.md  LICENSE  MusicPlayer_original.kt.tmp  README.md  SYSTEM_DESIGN_FLAWS.md  SuvMusic-1.2.0-Release.md  SuvMusic_M3E_Agent_Prompt.md  build.gradle.kts  com.suvojeet.suvmusic.yml  compose-stability.conf  encrypt_setup.py  extensive_changelog.txt  full_commits_utf8.txt  generate_icons.py  gradle.properties  release.md  release_1.0.4.md  settings.gradle.kts  suvmusic_bug_report_1774431442096.txt  update.json
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  ai_audio_processor.cpp  ai_audio_processor.h  audio_engine_components.h  biquad.h  file_mapper.cpp  limiter.cpp  limiter.h  pitch_shifter.h  recommendation_scorer.cpp  secure_config.cpp  spatial_audio.cpp  spatial_audio_bridge.h
composeApp/: build.gradle.kts
docs/: Build and Deployment.md  CHANGELOG.md  Developer Guidelines.md  Getting Started.md  OTA_SERVER_PLAN.md  Performance Optimization.md  Project Overview.md  SECURITY_AND_STABILITY_AUDIT.md  Security Considerations.md  Testing Strategy.md
extractor/: build.gradle.kts
gradle/: libs.versions.toml
kugou/: build.gradle.kts
lastfm/: build.gradle.kts
lrclib/: build.gradle.kts
lyric-kugou/: build.gradle.kts
lyric-lrclib/: build.gradle.kts
lyric-simpmusic/: build.gradle.kts
media-source/: build.gradle.kts
newpipe/: build.gradle.kts
providers/: build.gradle.kts
(+792 files in other folders)
